Fix overlapping inline videos

--- a/docroot/sites/akdn/themes/akdn/css/styles.css
+++ b/docroot/sites/akdn/themes/akdn/css/styles.css
@@ -18791,6 +18791,21 @@ map area {
   opacity: 1;
 }
 
+/* line 8795, ../sass/_akdn-redesign.scss */
+.media-youtube-outer-wrapper {
+  width: 100% !important;
+  height: 100% !important;
+}
+/* line 8798, ../sass/_akdn-redesign.scss */
+.media-youtube-outer-wrapper object {
+  max-width: 100%;
+}
+
+/* line 8803, ../sass/_akdn-redesign.scss */
+.media object {
+  max-width: 100%;
+}
+
 /*
 * Media Queries
 *
