--- a/docroot/sites/akdn/themes/akdn/sass/_akdn-redesign.scss
+++ b/docroot/sites/akdn/themes/akdn/sass/_akdn-redesign.scss
@@ -8790,3 +8790,17 @@ map {
     }
   }
 }
+
+// Fix overlapping inline videos
+.media-youtube-outer-wrapper {
+  width: 100% !important;
+  height: 100% !important;
+  object {
+    max-width: 100%;
+  }
+}
+.media {
+  object {
+    max-width: 100%;
+  }
+}
